# wg-ezpoll

./: .env.example  .gitattributes  .gitignore  alembic.ini  install.sh  pyproject.toml  wireguard-vpn-portal-prd-technical-design.md
apps/frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/frontend/src/: App.vue  (+1 more)
deploy/install/: install-ubuntu-debian.sh
deploy/nginx/: wireportal.conf
deploy/ops/: backup.sh  reconcile.sh  restore.sh
deploy/systemd/: wireportal-api.service  wireportal-wg-agent.service  wireportal-worker.service
docs/: api-contract.md  database-schema.md  deployment.md  installer-build.md  m0-development-notes.md  m0-validation.zh-CN.md  m1-development-notes.md  m10-ubuntu-acceptance.md  m2-development-notes.md  m3-development-notes.md  m4-development-notes.md  m5-development-notes.md  m6-development-notes.md  m7-development-notes.md  m8-development-notes.md  m9-development-notes.md  security-model.md  v1-development-plan.md  wg-agent-contract.md
migrations/: env.py
migrations/versions/: 20260626_0001_initial_schema.py
poc/: __init__.py
poc/m0/: README.md  README.zh-CN.md  __init__.py  access_rules.py  self_packager.py  wg_agent_socket_poc.py  wg_commands.py  wg_show_parser.py  wireguard-windows-installer-manifest.json
tests/m0/: test_access_rules.py  test_self_packager.py  test_wg_show_parser.py
tests/m1/: test_health.py
tests/m10/: test_ubuntu_acceptance_assets.py
tests/m2/: test_modules.py  test_schema.py
tests/m3/: test_auth_setup_api.py
(+17 files in other folders)
